feat: implement auth controller, fix jpa models and add exception handler